tests/sksl/errors/ArrayOfVoid.dsl.glsl
### Compilation failed:

error: functions may not return type 'void[2]'

error: variables of type 'void[2]' must be global

error: variables of type 'void[2]' must be global

3 errors
